Simulate the training cycle